<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">food4thought</string>
    <string name="action_settings">Settings</string>
    <string name="dummy">Lorem ipsum dolor sit amet, vix cu modo causae necessitatibus, quas assueverit in has. Vix in diceret salutatus. Iriure nominavi pertinacia duo ea, est ei oportere omittantur, eos an illum munere nominavi. Possim oportere te nec, fastidii torquatos sed an, sit ei prima legimus democritum. Ne cum suas perfecto legendos, adhuc quidam no cum. Assueverit interpretaris his ea.

Te harum feugiat propriae sit, ut has novum torquatos. Petentium liberavisse eos ne. Noster ponderum eum ei, quis omittam praesent sit cu, has semper legendos an. Scripta lucilius ex eam, sea id viris quodsi deterruisset. Vis ad modo minim necessitatibus, et purto percipit principes nec. Ludus assueverit ei per.

Duo ei eros interesset sadipscing. Et nobis euripidis comprehensam duo, vis reque comprehensam ea, clita mnesarchum est cu. Falli error sed at, eam ea officiis forensibus, facete voluptatibus sed at. Est ut zril tollit accumsan, no praesent salutandi cum, quot dicat choro id duo. Solet tollit ex eum. Id nusquam perfecto vim, eu habeo dolore efficiantur mel. Mei eu enim fugit neglegentur.

Ei nemore temporibus est, ne vel alii consetetur. Te nostrud luptatum sit, error menandri tincidunt ea per. Eos ea tantas causae. At minim sanctus indoctum duo, illud sadipscing cu eum. In vel wisi euismod.

Eruditi appetere mea te. At qui putant labitur dissentiunt, his vocibus copiosae concludaturque ei, stet indoctum suavitate ex vim. Aliquip disputando te usu. Ea sit ferri saperet offendit, case prima vis ei.</string>
    <string name="marikina_development">MARIKINA’S HISTORICAL DEVELOPMENT</string>
    <string name="marikina_dev_history">Marikina’s history provides an interesting glimpse into the events that helped shape its evolution.The Augustinians were the first to arrive at the Marikina Valley in 1500, at the spot known as “Chorillo” in Barangka. Next came the Jesuits in 1630, in a place now called Jesus dela Peña (Jesus of the Rocks). Here, the Jesuits established a mission and built a chapel.
In 1687, this pueblo became a parish known as Mariquina. In1901, with the coming of the Americans, its name officially became Marikina. The early settlers lived along the riverbanks and nearby fertile farms. With the industry of the natives, combined with the know-how of the early Chinese settlers, the farms began to produce rice and vegetables in great quantities until the valley became part of the country’s most prized hacienda. By the 19th century, Hacienda Marikina was owned and administered by the Tuason family and had become the biggest in the Philippines. For its massive size, natural beauty, and plentiful harvest, the hacienda was declared a mayorazgo (royal estate) by the Spanish colonial government
In 1887, Marikina’s shoemaking industry began through the pioneering efforts of Don Laureano “Kapitan Moy” Guevarra, assisted by Tiburcio Eustaquio, Ambrocio Sta. Ines, and Gervacio Carlos. Kapitan Moy’s worn-out pair of British shoes provided the creative spark: he took the shoes apart, painstakingly studied their components, and then made patterns out of them. After keenly observing the Chinese in Parian, Manila, he fashioned his own pair of shoes. With crude tools, raw materials, and the villagers’ support, Kapitan Moy subsequently mastered the art of shoemaking.
By the turn of the 20thcentury, Marikina emerged as a town of shoemakers. Honed by years in shoe manufacturing, the natives quickly developed a work ethic that had prepared them for the arrival of heavy industries in the 1950s. With the proliferation of industrial plants came waves of workers who had chosen to stay, rapidly increasing the population. In no time, shoe manufacturing flourished into a multi-million-peso industry, earning for Marikina the moniker, “Shoe Capital of the Philippines.”
On 11 June 1901 Marikina was incorporated in the newly created Province of Rizal by Act No. 137 of the Philippine Commission. In 1975, when the Metro Manila Commission was created under Presidential Decree No. 824, integrating four cities and 13 towns majority of which were in the province of Rizal, Marikina became part of Metropolitan Manila area. Legend has it that the Jesuits found an icon of the Infant Jesus among the boulders and, thus, decided to christen the new mission Jesus dela Peña or maybe because they were members of the “Society of Jesus” which made famous the place called Jesus dela Peña or Jesus of Stone.
When the Jesuits returned in 1689, they protracted the propagation of Christianity in the town, which included “Olandes” which was a part of Kalumpang. They left Jesus dela Peña, but they converted it to a plantation of wheat or trigo obtaining its name triguhan”.
When the church of San Roque was finished, the barrios of Barangka, Tañong and J. dela Peña were termed “Marikina”. The myths ad tales of the source of the word “Mariquina” were not yet justified but in the publication of a newspaper “La Illustracion Filipina” on 15 November 1859 and at the dictionary of Buseta published in Madrid in the same year, the name of “Marikina” was mentioned but they never mentioned its meaning.
In view of the non-existence of records or documents on how Mariquina came into being, the following legends were gathered from the old of the different barrios in Marikina.</string>
    <string name="mariquina">From the name of a priests name “Mariquina” </string>
    <string name="mariquina_history">One of the builders of the Jesus dela Peña Chapel was a young priests called “Mariquina” who was given the task of baptizing children to Christianity. Because of this very noble job “Mariquina” was named in his honor to bestow upon him glory and praise.</string>
    <string name="maria_cuina">From a young lady called “Maria Cuina”</string>
    <string name="maria_cuina_history">Before the Spaniards came to Mariquina, a beautiful, virtuous, polite and intelligent lady named “Maria Cuina” was residing in the town. Because of her expertise in business, she became rich and her fortunes were expended in charity ad eventually became famous in the whole town up to Manila. When a traveler from other towns visited the barrio, he asked for the name of the town, a resident replied “Maria Cuina” thinking that what was being asked was their admirable lady. Since then, the story spread throughout and the town was known as “Mariquina”.</string>
    <string name="marikit_na">From the word “Marikit-na” </string>
    <string name="marikit_na_history">During the construction of the chapel of Jesus dela Peña, it was being supervised by the Jesuit priest and the laborers were Filipinos. As expected, language barrier was a problem resulting in the usual misunderstanding. When the chapel was completed and the priest asked what would be called of the structure, one worker answered “Marikit-na-Po”, thinking that what was being asked was the condition of the chapel. Because the Spaniards knew that the word “Po” is a sign of respect and they were finding it difficult to express the letter “T”, the Marikit-na was believed to be said as “Marikina”.</string>
    <string name="spain">From a town in Spain</string>
    <string name="spain_history">In the Province of Nueva Viscaya in Spain, There was a beautiful town called “Mariquina”. This was where Eduardo de Mariquina, a famous musician got its name. The town of Mariquina in Spain is located beside the Charmaga River, which is the origin of the Jesuit Priests who came to the Philippines and established Jesus dela Peña. Because of this, “Mariquina” was used to honor the place where they came from. In 1901, Commissioner de Tavera changed the letter “Q” to a more vernacular “K”.

Based on history and documents in the custody of the municipal government of Marikina, the town was called Marikit-na in 1787 and was later changed to Mariquina. According to Dr. Trinidad Pardo de Tavera, the word Mariquina was in recognition of Capt. Berenguer de Mariquina who led the town in 1788.</string>

    
    <string name="register_num">Input your number to receive latest promotions and discount</string>
</resources>